Added minimal layout

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,1 +1,1 @@
-
+.chart-wrapper{margin:1.5em 0;}.chart-wrapper .chart-visual,.chart-wrapper .chart-text{display:inline-block;vertical-align:middle}.chart-wrapper .chart-visual{padding-right:1em}.chart-wrapper .chart-text{padding-left:1em}
